# basic

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig  sdkconfig.defaults
.claude/: settings.json
main/: CMakeLists.txt  console.cpp  console.h  idf_component.yml  main.cpp  weather.c  weather.h
